--- a/src/main/resources/templates/departments.html
+++ b/src/main/resources/templates/departments.html
@@ -3,12 +3,12 @@
 
 <head>
 	<div th:replace="resources :: head"></div>
-	<title>Countries</title>
+	<title>Departments</title>
 </head>
 
 <body>
 	<div class="container">
-		<h1>Countries</h1>
+		<h1>Departments</h1>
 		<hr />
 
 		<table class="table">
