--- a/src/main/resources/templates/departments.html
+++ b/src/main/resources/templates/departments.html
@@ -7,36 +7,36 @@
 </head>
 
 <body>
-	<div class="container">
-		<h1>Departments</h1>
-		<hr />
+	<div class="container text-center">
+		<h1 class="my-3 py-3">Departments</h1>
+		<hr>
 
-		<table class="table">
+		<table class="table align-middle">
 			<thead>
 				<tr>
-					<th scope="col">ID</th>
-					<th scope="col">Name</th>
-					<th scope="col">Address</th>
-					<th scope="col">Phone</th>
-					<th scope="col">Email</th>
-					<th scope="col">Website</th>
-					<th scope="col">Head of department</th>
+					<th scope="col" class="col-md-1 table-warning">ID</th>
+					<th scope="col" class="col-md-2 table-warning">Name</th>
+					<th scope="col" class="col-md-2 table-warning">Address</th>
+					<th scope="col" class="col-md-2 table-warning">Phone</th>
+					<th scope="col" class="col-md-2 table-warning">Email</th>
+					<th scope="col" class="col-md-2 table-warning">Website</th>
+					<th scope="col" class="col-md-2 table-warning">Head of department</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="department : ${departments}">
-					<td th:text="${department.id}"></td>
-					<td th:text="${department.name}"></td>
-					<td th:text="${department.address}"></td>
-					<td th:text="${department.phone}"></td>
-					<td th:text="${department.email}"></td>
-					<td th:text="${department.website}"></td>
-					<td th:text="${department.headOfDepartment}"></td>
+					<td th:text="${department.id}" class="table-primary"></td>
+					<td th:text="${department.name}" class="table-primary"></td>
+					<td th:text="${department.address}" class="table-info"></td>
+					<td th:text="${department.phone}" class="table-info"></td>
+					<td th:text="${department.email}" class="table-info"></td>
+					<td th:text="${department.website}" class="table-secondary"></td>
+					<td th:text="${department.headOfDepartment}" class="table-success"></td>
 				</tr>
 			</tbody>
 		</table>
-		<div th:replace="resources :: scripts"></div>
 	</div>
+	<div th:replace="resources :: scripts"></div>
 </body>
 
 </html>
